<resources>
    <string name="app_name">Diary</string>
    <string name="new_event">Новое событие</string>
    <string name="title_help">T</string>
    <string name="hint_description">Описание</string>
    <string name="text_view_end_time">Конец</string>
    <string name="text_view_start_time">Начало</string>
    <string name="hint_name_event">Название</string>
    <string name="date_time_picker_cancel">Cancel</string>
    <string name="date_time_picker_ok">OK</string>
</resources>
