<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/activity_event_create_toolbar"
        layout="@layout/event_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/activity_event_create_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_help"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="48dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <EditText
            android:id="@+id/activity_event_create_edit_text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_name_event"
            android:inputType="textImeMultiLine"
            android:textCursorDrawable="@drawable/custom_color_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_two"
            app:layout_constraintStart_toEndOf="@id/guideline_one"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider_line_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/darker_gray" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/activity_event_create_image_timer_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_three"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="48dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <TextView
            android:id="@+id/activity_event_create_start_time_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_start_time"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@id/activity_event_create_start_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activity_event_create_set_start_time_image_arrow"
            app:layout_constraintStart_toStartOf="@id/guideline_three"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_event_create_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activity_event_create_set_start_time_image_arrow"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="21.04 21:00" />

        <ImageView
            android:id="@+id/activity_event_create_set_start_time_image_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_button_chevron_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_four"
            app:layout_constraintStart_toEndOf="@+id/activity_event_create_start_time_title"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider_line_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/darker_gray" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/activity_event_create_image_timer_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_five"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="48dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <TextView
            android:id="@+id/activity_event_create_end_time_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_end_time"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@id/activity_event_create_end_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activity_event_create_set_end_time_image_arrow"
            app:layout_constraintStart_toStartOf="@id/guideline_five"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_event_create_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activity_event_create_set_end_time_image_arrow"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22:00" />

        <ImageView
            android:id="@+id/activity_event_create_set_end_time_image_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_button_chevron_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_six"
            app:layout_constraintStart_toEndOf="@+id/activity_event_create_end_time_title"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider_line_three"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/darker_gray" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/activity_event_create_image_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_description_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_seven"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_seven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="48dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_eight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <EditText
            android:id="@+id/activity_event_create_edit_text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_description"
            android:inputType="textImeMultiLine"
            android:textCursorDrawable="@drawable/custom_color_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_eight"
            app:layout_constraintStart_toEndOf="@id/guideline_seven"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
